# RustgRPC

./: .env  .gitignore  Cargo.toml  build.rs
proto/: calculator.proto  messages.proto  pow.proto  user.proto  userV2.proto
src/: .env  Client.rs  DBManager.rs  client.rs  dbmanager.rs  main.rs
src/Entities/: User.rs  message.rs  user.rs
src/entities/: RefreshToken.rs  RegularToken.rs  message.rs  mod.rs  refresh_token.rs  regular_token.rs  user.rs
src/migrations/: create_messages_table.rs  create_regular_token.rs  create_users_table.rs  migrator.rs  mod.rs
src/services/: JWTService.rs  calculator_service.rs  jwt_service.rs  messages_service.rs  mod.rs  pow_service.rs  user_service.rs
