[package]
name = "CalculatorAPI"
version = "0.1.0"
edition = "2021"

# server binary
[[bin]]
name = "server"
path = "src/main.rs"

# client binary
[[bin]]
name = "client"
path = "src/client.rs"

[dependencies]
tokio = { version = "1.38.0", features = ["full"] }
lazy_static = "1.4.0"
sea-orm = { version = "0.12.15", features = ["sqlx-mysql", "runtime-tokio", "macros"] }
tonic = "0.12.0"
prost = "0.13.1"
log = "0.4.22"
tonic-middleware = "0.2.0"
once_cell = "1.8.0"



sqlx-mysql = "0.7.4"
tonic-build = "0.12.0"
serde = { version = "1.0.204", features = ["derive"] }

[dependencies.sqlx]
version = "0.7.4"
features = ["runtime-tokio", "mysql"]
[build-dependencies]
tonic-build = { version = "0.12.0" }